version 1.4.2, in progress
- Add VECM (Vector Error Correction Models) for time-series
  data
- Add confidence ellipse option for two coefficients
- New command "mle" : a general-purpose maximizer of log
  likelihood, using the BFGS algorithm -- works much like the
  "nls" command, taking a user-specified log likelihood function
  as input, along with (optionally) derivatives of the log
  likelihood with respect to the parameters
- More XLS importer fixes
- Add support for seasonal ARMA
- Accommodate custom time-series frequencies
- Johansen cointegration test: extend to cover all 5 cases, 
  produce a fuller report (loadings, long-run matrix)
- Add bootstrapped confidence intervals for impulse responses 
  in VAR models
- Add test for multivariate normality of VAR residuals
- Add autocorrelation and ARCH tests for VAR equations
- Add printing of cross-equation covariance matrix for VARs
- Add combined plot of residuals for VARs
- Add log-likelihood, AIC and BIC for VARs
- Add inverse roots plot for VARs (Jack Lucchetti)
- Add "robust" option for logit and probit (compute QML
  or Huber-White covariance matrix)
- Add "robust" standard errors option for WLS
- Remove overly verbose notification dialogs
- Add importers for Eviews workfiles and Stata .dta files
- Editable windows: show Save button as disabled if there's
  nothing to be saved
- Model selection dialog: ensure that the selected regressand 
  is not also listed among the regressors
- Graph editing: make several more types of graph editable
- Graph saving: add PDF option if it's supported by gnuplot
- Main window: don't show generated lags in the list of variables
- ARMA: remove the ARMA item from the Variable menu (it's still
  there in the Model menu); revamp the X-12-ARIMA driver so it
  can handle models with exogenous regressors 
- gretl graph page: add option to save as TeX source
- TeX: enable pdflatex and viewing of TeX output in PDF form
  (to use pdflatex, enter this as the name of the program to